data/derived/sp14/progs/unify/prog4141.ml.out
Characters 508-528:
  | Timmy2 (e1,e2)       -> sin(pi*.eval(e,x,y))*cos(pi*.eval(e,x,y));;
                            ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
